--- a/index-wade.html
+++ b/index-wade.html
@@ -6,7 +6,7 @@
   <title>CV - Madiop Wade</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" />
-  <link rel="stylesheet" href="styles.css"> <!-- Pour tes styles personnalisés -->
+  <link rel="stylesheet" href="style-wade.css"> <!-- Pour tes styles personnalisés -->
 </head>
 <body class="has-background-light">
 
@@ -19,11 +19,11 @@
       </a>
 
       <!-- Informations personnelles -->
-      <div class="box">
+      <div class="box box-wade">
         <div class="columns is-vcentered is-multiline">
           <div class="column is-3 has-text-centered">
             <figure class="image is-128x128 is-inline-block">
-              <img class="is-rounded" src="img/profil.jpg" alt="profil">
+              <img class="is-rounded" src="./Assets/profil.jpg" alt="profil">
             </figure>
           </div>
           <div class="column is-7">
